--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,83 +1,97 @@
-*{
+* {
     box-sizing: border-box;
 }
-body{
-    background: #fff;
-    margin: 0;
+
+body {
+    background : #fff;
+    margin     : 0;
     font-family: monospace;
 }
-h1{
-    color:#444;
+
+h1 {
+    color     : #444;
     text-align: center;
 }
+
 /* Estilos de la galeria */
 
-.gallery_container{
-    display:grid;
+.gallery_container {
+    display              : grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 150px;
-    padding:20px;
-    grid-gap:10px;
+    grid-auto-rows       : 10rem;
+    padding              : 2rem;
+    grid-gap             : 1rem;
 }
-.gallery__item{
+
+.gallery__item {
     position: relative;
 }
-.gallery__img{
-    width: 100%;
-    height: 100%;
+
+.gallery__img {
+    width     : 100%;
+    height    : 100%;
     object-fit: cover;
 }
-.gallery__title{
-    position: absolute;
-    bottom: 0;
-    color: #fff;
-    background: linear-gradient(rgba(255, 255, 255, 0),rgba(0, 0, 0, 1));
-    width: 100%;
-    margin:0;
-    padding:10px;
+
+.gallery__title {
+    position  : absolute;
+    bottom    : 0;
+    color     : #fff;
+    background: linear-gradient(rgba(255, 255, 255, 0), rgba(0, 0, 0, 1));
+    width     : 100%;
+    margin    : 0;
+    padding   : 1rem;
 }
-.gallery__item:nth-child(4){
+
+.gallery__item:nth-child(4) {
     grid-column-start: span 2;
 }
-.gallery__item:nth-child(5){
+
+.gallery__item:nth-child(5) {
     grid-row-start: span 2;
 }
-.gallery__item:nth-child(9){
+
+.gallery__item:nth-child(9) {
     grid-column-start: span 2;
 }
 
-@media (min-width:768px){
-    .gallery_container{
-        grid-template-columns: repeat(4, 1fr); 
+@media (min-width: 48em) {
+    .gallery_container {
+        grid-template-columns: repeat(4, 1fr);
     }
-    .gallery__item:nth-child(3){
+
+    .gallery__item:nth-child(3) {
         grid-column-start: span 2;
     }
-    .gallery__item:nth-child(4){
+
+    .gallery__item:nth-child(4) {
         grid-column-start: span 3;
     }
-    .gallery__item:nth-child(5){
+
+    .gallery__item:nth-child(5) {
         grid-row-start: span 3;
     }
-    .gallery__item:nth-child(9){
+
+    .gallery__item:nth-child(9) {
         grid-column-start: span 3;
     }
 }
 
-@media (min-width:1024px){
-    .gallery_container{
+@media (min-width: 64em) {
+    .gallery_container {
         grid-template-columns: repeat(5, 1fr);
-        width: 90%;
-        margin: auto; 
+        width                : 90%;
+        margin               : auto;
     }
-    .gallery__item:nth-child(1){
+
+    .gallery__item:nth-child(1) {
         grid-column-start: span 2;
-        grid-row-start:  span 2;
+        grid-row-start   : span 2;
 
     }
-    .gallery__item:nth-child(4){
+
+    .gallery__item:nth-child(4) {
         grid-column-start: span 3;
-        grid-row-start:  span 3;
+        grid-row-start   : span 3;
     }
-    
 }
